[FIX] l10n_py_vat_book #99
- pylint
- corregir run tests para que haga los tests
- Agregar TIKE
- Agregar campo en tipo de documento para habilitar que salga en el libro de IVA
- El nameget del tipo de documento ahora es Prefijo + Name en lugar de
  code + name
- corregir transferncia a tatakua.sh
- Libro de IVA en pdf y en excel ya no salen vacios.
- Documentation
- cambiar ar por py en muchos lugares
- agrego comando para mover datos al repositorio de sh
- se crea una factua en el test
------------------ Test local OK
- Reordenar las columnas del reporte de IVA
- Corregir la columna total que estaba en cero
- ajustando los test para sh 3

--- a/l10n_py_invoice_document/views/account_journal_view.xml
+++ b/l10n_py_invoice_document/views/account_journal_view.xml
@@ -23,7 +23,7 @@
                        attrs="{'invisible':['|', '|', ('l10n_latam_country_code', '!=', 'PY'), ('l10n_latam_use_documents', '=', False), ('type', '!=', 'sale')], 'required':[('l10n_latam_country_code', '=', 'PY'), ('l10n_latam_use_documents', '=', True), ('type', '=', 'sale')]}"/>
 <!--
                 <field name="l10n_py_share_sequences"
-                       attrs="{'invisible':[('l10n_ar_afip_pos_system', '!=', 'II_IM')]}"/>
+                       attrs="{'invisible':[('l10n_py_afip_pos_system', '!=', 'II_IM')]}"/>
 -->
             </field>
 
