--- a/l10n_py_invoice_document/views/l10n_latam_document_type_view.xml
+++ b/l10n_py_invoice_document/views/l10n_latam_document_type_view.xml
@@ -12,11 +12,14 @@
             </field>
 
             <field name='report_name' position="after">
+<!--
                 <field name='cod_doc_set'/>
+                -->
                 <field name='req_timbrado' widget="boolean_toggle"/>
                 <field name='compra' widget="boolean_toggle"/>
                 <field name='venta' widget="boolean_toggle"/>
                 <field name='active' widget="boolean_toggle"/>
+                <field name='vat_enabled' widget="boolean_toggle"/>
             </field>
         </field>
     </record>
@@ -28,19 +31,24 @@
         <field name="inherit_id" ref="l10n_latam_invoice_document.view_document_type_tree"/>
         <field name="arch" type="xml">
             <field name="doc_code_prefix" position="attributes">
+                <attribute name="string">Prefijo</attribute>
+            </field>
+            <field name='report_name' position="attributes">
                 <attribute name="invisible">1</attribute>
             </field>
-
             <field name='report_name' position="after">
+<!--
                 <field name='cod_doc_set'/>
+                -->
                 <field name='req_timbrado' widget="boolean_toggle"/>
                 <field name='compra' widget="boolean_toggle"/>
                 <field name='venta' widget="boolean_toggle"/>
+                <field name='vat_enabled' widget="boolean_toggle"/>
             </field>
         </field>
     </record>
 
-    <record model="ir.actions.act_window" id="action_document_type_argentina">
+    <record id="action_document_type_paraguay" model="ir.actions.act_window">
         <field name="name">Document Types</field>
         <field name="res_model">l10n_latam.document.type</field>
         <field name="context">{'search_default_localization': 1}</field>
