[FIX] mejoras varias - pylint checks - Se agrega en tipos de documento la posiblidad de agregar   secuencias propias en los documentos de compra. Sin embarno no esta   poniendo el prefijo en la secuencia. Queda revisar eso en #107 - Al cargar un documento se formatea el numero de documento solo si el documento requiere timbrado

--- a/l10n_py_invoice_document/views/l10n_latam_document_type_view.xml
+++ b/l10n_py_invoice_document/views/l10n_latam_document_type_view.xml
@@ -12,9 +12,7 @@
             </field>
 
             <field name='report_name' position="after">
-<!--
-                <field name='cod_doc_set'/>
-                -->
+                <field name='purchase_seq'/>
                 <field name='req_timbrado' widget="boolean_toggle"/>
                 <field name='compra' widget="boolean_toggle"/>
                 <field name='venta' widget="boolean_toggle"/>
@@ -37,9 +35,7 @@
                 <attribute name="invisible">1</attribute>
             </field>
             <field name='report_name' position="after">
-<!--
-                <field name='cod_doc_set'/>
-                -->
+                <field name='purchase_seq' widget="boolean_toggle"/>
                 <field name='req_timbrado' widget="boolean_toggle"/>
                 <field name='compra' widget="boolean_toggle"/>
                 <field name='venta' widget="boolean_toggle"/>
