--- a/l10n_py_invoice_document/views/account_move_view.xml
+++ b/l10n_py_invoice_document/views/account_move_view.xml
@@ -18,10 +18,18 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
+            <field name="restrict_mode_hash_table" position="after">
+                <field name="purchase_seq" invisible="1"/>
+            </field>
+
+            <!-- poner invisible el numero de documento si no uso documentos,
+                 si es venta o si es compra pero require secuencia. -->
             <field name="l10n_latam_document_number" position="attributes">
                 <attribute name="attrs">{
-                    'invisible': ['|',('l10n_latam_use_documents', '=', False),
-                                      ('type', 'in', ['out_invoice','out_refund'])]
+                    'invisible': ['|','|',('l10n_latam_use_documents', '=', False),
+                                          ('type', 'in', ['out_invoice','out_refund']),
+                                          ('purchase_seq', '=', True),
+                                  ]
                     }</attribute>
             </field>
 
