--- a/l10n_py_reports/views/account_payment_view.xml
+++ b/l10n_py_reports/views/account_payment_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
+    <!-- agregar talonarios al formulario de pago desde factura -->
     <record id="view_account_payment_form" model="ir.ui.view">
         <field name="model">account.payment</field>
-        <field name="name">REPORTS receiptbook</field>
+        <field name="name">L10N PY REPORTS receiptbook</field>
         <field name="inherit_id" ref="account.view_account_payment_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='journal_id']" position="after">
