[FIX] Mejoras en Recibos #111     - redibujamos el recibo     - Empezamos a escribir todo en ingles.     - agregamos recurso de traduccion es_py     - intento de crar un wizard para modificar el nro de secuencia pero al final se puede hacer con el receiptbook, Hay que quitar el codigo del quizard     - Se agregan a tipos de documento los documentos dc_receipt, dc_cash_receipt, dc_payment_order     - Compras y ventas pueden estar deshabilitados al mismo tiempo porque       un recibo no debe salir como documento ni en compras ni en ventas,       asi que se quita la constraint.     - se agrega el modelo account.payment.receiptbook y sus vistas asociadas     - En formulario de pagos aparece receipbook solo al recibir dinero, al enviar dinero selecciona la       orden de pago por defecto.     - se crea un receiptbook por defecto para pagos a proveedores     - hay que dejar el modelo report.receiptbook para eliminarlo despues sino falla el build. (?)     - migracion para solucionar los pagos ya hechos.

--- a/l10n_py_invoice_document/views/timbrado_views.xml
+++ b/l10n_py_invoice_document/views/timbrado_views.xml
@@ -2,7 +2,7 @@
 <odoo>
 
     <record id="view_timbrado_form" model="ir.ui.view">
-        <field name="name">INVOICE DOCUMENT timbrado</field>
+        <field name="name">L10N_PY_INVOICE_DOCUMENT timbrado</field>
         <field name="model">timbrado.data</field>
         <field name="arch" type="xml">
             <form string="Document Type">
