--- a/l10n_py_reports/templates/report_payment_receipt_template.xml
+++ b/l10n_py_reports/templates/report_payment_receipt_template.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <!-- template de recibo -->
+
     <template id="report_payment_receipt_document">
         <t t-call="web.external_layout">
             <t t-set="o" t-value="o.with_context(lang=lang)"/>
