--- a/l10n_py_reports/views/account_payment_receiptbook_view.xml
+++ b/l10n_py_reports/views/account_payment_receiptbook_view.xml
@@ -2,15 +2,12 @@
 <odoo>
 
     <record id="view_receipt_receiptbook_search" model="ir.ui.view">
-        <field name="name">account.payment.receiptbook.search</field>
+        <field name="name">L10N PY REPORTS search</field>
         <field name="model">account.payment.receiptbook</field>
         <field name="arch" type="xml">
-            <search string="Receipt Books">
+            <search string="Receiptbooks">
                 <field name="name"/>
                 <field name="sequence_type"/>
-<!--
-                <field name="partner_type"/>
--->
                 <field name="document_type_id"/>
                 <field name="company_id" widget="selection" groups="base.group_multi_company"/>
             </search>
@@ -18,7 +15,7 @@
     </record>
 
     <record id="view_receipt_receiptbook_tree" model="ir.ui.view">
-        <field name="name">account.payment.receiptbook.tree</field>
+        <field name="name">L10N PY REPORTS receiptbook tree</field>
         <field name="model">account.payment.receiptbook</field>
         <field name="arch" type="xml">
             <tree>
@@ -33,11 +30,11 @@
     </record>
 
     <record id="view_receipt_receiptbook_form" model="ir.ui.view">
-        <field name="name">account.payment.receiptbook.form</field>
+        <field name="name">L10N PY REPORTS receiptbook.form</field>
         <field name="model">account.payment.receiptbook</field>
         <field name="arch" type="xml">
-            <form string="Receipt Books"> 
-                <sheet string="Receipt Books">
+            <form string="Receiptbooks">
+                <sheet string="Receiptbooks">
                     <group>
                         <group>
                             <field name="name"/>
@@ -45,9 +42,6 @@
                             <field name="sequence_type"/>
                             <field name="padding" attrs="{'invisible':[('sequence_type','!=','manual')],'required':[('sequence_type','=','manual')]}"/>
                             <field name="prefix"/>
-<!--
-                            <field name="mail_template_id"  context="{'default_model': 'account.payment.group'}"/>
--->
                         </group>
                         <group>
                             <field name="document_type_id"/>
