[FIX] Factura pasa a borrador y se vuelve a validar #118   - correcciones varias en traduccion

--- a/l10n_py_invoice_document/views/partner_type_view.xml
+++ b/l10n_py_invoice_document/views/partner_type_view.xml
@@ -45,7 +45,7 @@
         <field name="context">{"search_default_active":1}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
-                Crear un nuevo tiopo de Socio de Negocio
+                Crear un nuevo tipo de Socio de Negocio
             </p>
             <p>
                 Mediante los Tipos de Socio de Negocio se definen las reglas
