[FIX] Al facturar a un contacto de una empresa en la factura debe salir la empresa #117
    Se corrigio en Recibo, Factura y Libro de IVA para que en todos lados salga
    el partner_id.commercial_company_name o si esta en null el name

--- a/l10n_py_reports/templates/report_payment_receipt_template.xml
+++ b/l10n_py_reports/templates/report_payment_receipt_template.xml
@@ -18,7 +18,6 @@
                 border:2px solid black;
                 border-radius: 20px;
                 }
-
             </style>
 
             <div class="page">
@@ -35,7 +34,7 @@
                             <t t-if="o.partner_type == 'supplier'">
                                 <strong>Orden de pago para: </strong>
                             </t>
-                            <span t-field="o.partner_id"
+                            <span t-esc="o.partner_id"
                                   t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": False}'/>
                         </div>
                     </div>
