--- a/l10n_py_reports/templates/report_preprinted_invoice.xml
+++ b/l10n_py_reports/templates/report_preprinted_invoice.xml
@@ -55,7 +55,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <span style="position: relative; left:30%;" t-esc="o.partner_id.name"/>
+                            <span style="position: relative; left:30%;" t-esc="o.partner_id.commercial_company_name or o.partner_id.name"/>
                         </td>
                         <td>
                             <span style="position: relative; left:40%; " t-field="o.partner_id.ruc"/>
